<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="about_title_fmt">		درباره
 <xliff:g id="app_name">%s</xliff:g></string>
  <string name="about_android">%1$s برنامه اندروید</string>
  <string name="about_version">نسخه%1$s </string>
  <string name="actionbar_sync">بروز رسانی</string>
  <string name="actionbar_upload">بارگذاری</string>
  <string name="actionbar_upload_from_apps">محتوا از دیگر برنامه ها</string>
  <string name="actionbar_upload_files">پرونده‌ها</string>
  <string name="actionbar_open_with">باز کردن با</string>
  <string name="actionbar_mkdir">پوشه جدید</string>
  <string name="actionbar_move">انتقال</string>
  <string name="actionbar_logger">گزارشات</string>
  <string name="actionbar_sort">چینش</string>
  <string name="actionbar_sort_title">چینش بر اساس</string>
    <string-array name="actionbar_sortby">
    	<item>الفبا</item>
    	<item>جدیدترین ها</item>
    	
    </string-array>
    <string name="prefs_instant_upload">بارگذاری تصاویر جدید</string>
    <string name="prefs_instant_upload_summary">بارگذاری بلافاصله تصاویر ثبت شده با دوربین</string>
    <string name="prefs_instant_video_upload">بارگذاری ویدیو های جدید</string>
    <string name="prefs_instant_video_upload_summary">بارگذاری بلافاصله ویدیو های ثبت شده با دوربین</string>
	<string name="prefs_instant_upload_path_title">بارکذاری مستقیم مسیر تصاویر</string>
    <string name="prefs_instant_video_upload_path_title">بارگذاری مستقیم مسیر ویدیو</string>
    <string name="recommend_text">"
من شما را دعوت به استفاده از  %1$sروی گوشی تلفن همراه  با سیستم عامل اندروید  میکنم ، جهت دانلود  هم مراجعه کنید به :\n %2$s"</string>
  <string name="actionbar_settings">تنظیمات</string>
  <string name="actionbar_see_details">جزئیات</string>
  <string name="actionbar_send_file">ارسال</string>
  <string name="prefs_category_general">عمومی</string>
  <string name="prefs_category_more">بیش‌تر</string>
  <string name="prefs_accounts">حساب کاربری شما</string>
  <string name="prefs_manage_accounts">مدیریت حساب های کاربری</string>
  <string name="prefs_pincode">پین برنامه</string>
  <string name="prefs_pincode_summary">رمزگذاری ورود به برنامه</string>
  <string name="prefs_log_title">فعال کردن ورود</string>
  <string name="prefs_log_summary">این برای مشکلات ورود استفاده شده است.</string>
  <string name="prefs_log_title_history">تاریخچه ورود</string>
  <string name="prefs_log_summary_history">این وقایع  ثبت شده را نمایش می دهد.</string>
  <string name="prefs_log_delete_history_button">حذف تاریخچه</string>
  <string name="prefs_help">راهنما</string>
  <string name="prefs_recommend">پیشنهاد دادن به یک دوست</string>
  <string name="prefs_feedback">باز خورد</string>
  <string name="prefs_imprint">مهر زدن</string>
  <string name="recommend_subject">%1$s را بر روی گوشی هوشمند خود امتحان کنید.</string>
  <string name="auth_check_server">چک کردن سرور</string>
  <string name="auth_host_url">آدرس سرور https://…</string>
  <string name="auth_username">نام کاربری</string>
  <string name="auth_password">رمز عبور</string>
  <string name="auth_register">با %1$s آشنا شوید .</string>
  <string name="sync_string_files">پرونده‌ها</string>
  <string name="setup_btn_connect">اتصال</string>
  <string name="uploader_btn_upload_text">بارگذاری</string>
  <string name="uploader_top_message">انتخاب پوشه آپلود:</string>
  <string name="uploader_wrn_no_account_title">هیچ حسابی یافت نشد</string>
  <string name="uploader_wrn_no_account_text">هیچ حسابی در %1$s بر روی دستگاه شما موجود نیست.لطفا اول یک حساب ترتیب دهید.</string>
  <string name="uploader_wrn_no_account_setup_btn_text">نصب</string>
  <string name="uploader_wrn_no_account_quit_btn_text">خروج</string>
  <string name="uploader_wrn_no_content_title">هیچ مطلبی بارگذاری نشده‌ است</string>
  <string name="uploader_wrn_no_content_text">هیچ مطلبی دریافت نشده است. هیچ‌‌چیزی بارگذاری نشده.</string>
  <string name="uploader_error_forbidden_content">%1$s اجازه ی دسترسی به محتوای مشترک را نمی دهد</string>
  <string name="uploader_info_uploading">در حال بارگذاری</string>
  <string name="file_list_seconds_ago">ثانیه‌ها پیش</string>
  <string name="file_list_empty">اینجا هیچ چیز نیست.</string>
  <string name="file_list_loading">درحال بارگذاری...</string>
  <string name="local_file_list_empty">هیچ فایلی در این پوشه نیست.</string>
  <string name="file_list_folder">پوشه</string>
  <string name="file_list_folders">پوشه </string>
  <string name="file_list_file">پرونده</string>
  <string name="file_list_files">پرونده </string>
  <string name="filedetails_select_file">روی هر فایل کلیک کنید تا اطلاعات اضافی نمایش داده شود.</string>
  <string name="filedetails_size">اندازه:</string>
  <string name="filedetails_type">نوع:</string>
  <string name="filedetails_created">ایجاد شده توسط:</string>
  <string name="filedetails_modified">ایجاد شده در تاریخ :</string>
  <string name="filedetails_download">بارگیری</string>
  <string name="filedetails_sync_file">بروز رسانی فایل</string>
  <string name="filedetails_renamed_in_upload_msg">فایل در هنگام بارگذاری به %1$s تغییر نام یافت</string>
  <string name="action_share_file">اشتراک گذاشتن لینک</string>
  <string name="action_unshare_file">لغو اشتراک گذاشتن لینک</string>
  <string name="common_yes">بله</string>
  <string name="common_no">نه</string>
  <string name="common_ok">ایجاد !</string>
  <string name="common_cancel_download">قطع دانلود</string>
  <string name="common_cancel_upload">متوقف کردن بار گذاری</string>
  <string name="common_cancel">انصراف</string>
  <string name="common_save_exit">ذخیره سازی و خروج</string>
  <string name="common_error">خطا</string>
  <string name="common_loading">بارگذاری ...</string>
  <string name="common_error_unknown">خطای نامشخص</string>
  <string name="about_title">درباره</string>
  <string name="change_password">تغییر گذر واژه</string>
  <string name="delete_account">خروج از حساب کاربری</string>
  <string name="create_account">ساخت حساب</string>
  <string name="upload_chooser_title">بارگذاری از ...</string>
  <string name="uploader_info_dirname">نام پوشه</string>
  <string name="uploader_upload_in_progress_ticker">در حال بارگذاری ...</string>
  <string name="uploader_upload_in_progress_content">%1$d%% در حال بارگذاری %2$s</string>
  <string name="uploader_upload_succeeded_ticker">بارگذاری موفقیت‌آمیز بود</string>
  <string name="uploader_upload_succeeded_content_single">%1$s با موفقیت بار گذاری شد</string>
  <string name="uploader_upload_failed_ticker">بارگذاری ناموفق بود</string>
  <string name="uploader_upload_failed_content_single">بارگذاری %1$s نتوانست به طور کامل انجام شود</string>
  <string name="downloader_download_in_progress_ticker">در حال بارگیری ...</string>
  <string name="downloader_download_in_progress_content">%1$d%% در حال دانلود %2$s</string>
  <string name="downloader_download_succeeded_ticker">بارگیری موفقیت‌آمیز بود</string>
  <string name="downloader_download_succeeded_content">%1$s با موفقیت دانلود شد</string>
  <string name="downloader_download_failed_ticker">بارگیری ناموفق بود</string>
  <string name="downloader_download_failed_content">دانلود %1$s نمی توانست به طور کامل انجام شود.</string>
  <string name="downloader_not_downloaded_yet">دانلود هنوز به پایان نرسیده است.</string>
  <string name="common_choose_account">حساب کاربری را انتخاب کنید</string>
  <string name="sync_fail_ticker">همگام سازی ناموفق</string>
  <string name="sync_fail_content">همگام سازی %1$s نتوانست به طور کامل انجام شود</string>
  <string name="sync_fail_content_unauthorized">رمز عبور نامعتبر برای %1$s</string>
  <string name="sync_conflicts_in_favourites_ticker">ناسازگاری ها یافت شدند</string>
  <string name="sync_conflicts_in_favourites_content">%1$d پرونده ها نمیتوانند همگام سازی شوند.</string>
  <string name="sync_fail_in_favourites_ticker">همگام سازی پرونده ها ناموفق بود.</string>
  <string name="sync_fail_in_favourites_content">محتوای %1$d فایل ها نمی توانند همگام باشند(%2$d ناسازگاری)</string>
  <string name="sync_foreign_files_forgotten_ticker">بعضی از فایلهای محلی فراموش شده اند</string>
  <string name="sync_current_folder_was_removed">پوشه %1$s دیگر وجود ندارد</string>
  <string name="foreign_files_move">انتقال همه</string>
  <string name="foreign_files_success">همه ی فایل ها جا به جا شدند</string>
  <string name="foreign_files_fail">بعضی از فایل ها نمی توانند انتقال یابند</string>
  <string name="foreign_files_local_text">محلی: %1$s</string>
  <string name="foreign_files_remote_text">دور از دسترس:  %1$s</string>
  <string name="pincode_enter_pin_code">لطفا PIN برنامه خودتان را وارد کنید</string>
  <string name="pincode_configure_your_pin">PIN برنامه را وارد کنید</string>
  <string name="pincode_configure_your_pin_explanation">هر زمان که برنامه آغاز شود PIN درخواست خواهد شد.</string>
  <string name="pincode_reenter_your_pincode">لطفا PIN برنامه خودتان را دوباره وارد کنید</string>
  <string name="pincode_remove_your_pincode">PIN برنامه خودتان را حذف کنید</string>
  <string name="pincode_mismatch">PIN های برنامه یکسان نیستند</string>
  <string name="pincode_wrong">PIN برنامه نادرست است</string>
  <string name="pincode_removed">PIN برنامه حذف شده است</string>
  <string name="pincode_stored">PIN برنامه ذخیره شده است</string>
  <string name="media_notif_ticker">%1$s پخش کننده موسیقی</string>
  <string name="media_state_playing">%1$s ( در حال پخش موسیقی )</string>
  <string name="media_state_loading">%1$s (درحال بارگذاری)</string>
  <string name="media_event_done">%1$s پخش به پایان رسید.</string>
  <string name="media_err_nothing_to_play">هیچ رسانه ای یافت نشد.</string>
  <string name="media_err_no_account">هیچ حسابی ارائه نشده است.</string>
  <string name="media_err_not_in_owncloud">پرونده در حساب کاربری معتبر نیست.</string>
  <string name="media_err_unsupported">کدک رسانه پشتیبانی نشده است.</string>
  <string name="media_err_io">فایل رسانه نمیتواند خوانده شود.</string>
  <string name="media_err_malformed">فایل رسانه به شکل صحیح رمزگذاری نشده است.</string>
  <string name="media_err_timeout">در حین تلاش برای پخش کردن، مهلت به پایان رسیده است</string>
  <string name="media_err_invalid_progressive_playback">فایل رسانه نمیتواند جریان داشته باشد.</string>
  <string name="media_err_unknown">فایل رسانه با استفاده از پخش کننده stock media player قابل پخش نیست.</string>
  <string name="media_err_security_ex">خطای امنیتی، تلاش برای پخش %1$s</string>
  <string name="media_err_io_ex">خطای وارد کردن، تلاش برای پخش %1$s</string>
  <string name="media_err_unexpected">خطای غیرمنتظره، تلاش برای پخش %1$s</string>
  <string name="media_rewind_description">دکمه عقبگرد</string>
  <string name="media_play_pause_description">دکمه پخش یا توقف</string>
  <string name="media_forward_description">دکمه رو به جلو سریع</string>
  <string name="auth_trying_to_login">تلاش برای ورود...</string>
  <string name="auth_no_net_conn_title">هیچ ارتباطی به شبکه موجود نیست</string>
  <string name="auth_nossl_plain_ok_title">اتصال با موفقیت به النون برقرار است.  </string>
  <string name="auth_testing_connection">آزمایش اتصال...</string>
  <string name="auth_unauthorized">نام کاربری یا رمز ورود اشتباه است</string>
  <string name="auth_expired_basic_auth_toast">لطفاً رمز کاربری فعلی را وارد نمایید</string>
  <string name="oauth_check_onoff">ورود با oAuth2   </string>
    <string name="account_setup_basics_password_hint">گذرواژه</string>
    <string name="account_setup_basics_password_retype_hint">تکرار  گذرواژه</string>
    <string name="in_the_name_of_god">بــسمــه تــعــالــی</string>
    <string name="send_sms_buttontext">ارسال پیامک</string>
    <string name="welcome_message_title">به اِلِنون خوش آمدید!</string>
    <string name="account_setup_basics_email_hint">آدرس ایمیل</string>
    <string name="forgot_password">گذرواژه را فراموش کرده ام</string>
    <string name="account_setup_basics_manual_setup_action">ثبت دستی</string>
    <string name="account_setup_basics_activate_action">فعالسازی</string>
    <string name="signin">ورود</string>
</resources>