<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/welcome_background_color"
    android:gravity="center|top"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center|top"
        android:layout_weight="1"
        android:padding="6dip"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:shadowColor="#555555"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:text="@string/in_the_name_of_god"
                android:textStyle="bold" />
        <LinearLayout
                android:id="@+id/manual_layout"
                android:layout_width="@dimen/dialog_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="270dp"
                android:background="@drawable/rounded"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/manual_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MANUAL" />

                <Button
                    android:id="@+id/button_doaction"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/selectable_item_background_green"
                    android:text="@string/send_sms_buttontext" />
            </LinearLayout> 

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|top"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_corners_shadow_2"
                android:gravity="center|top"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:id="@+id/welcome_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:gravity="center|top"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/thumbnail"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="EleNoon"
                        android:scaleType="fitCenter"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="@dimen/dialog_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:shadowColor="#aaaaaa"
                        android:shadowDx="5"
                        android:shadowDy="5"
                        android:shadowRadius="10"
                        android:text="@string/welcome_message_title"
                        android:textStyle="bold" />
                    
                     <Button
            			android:id="@+id/centeredRefreshButton"
            			android:layout_width="130dp"
            			android:layout_height="wrap_content"
            			android:background="@drawable/selectable_item_background_green"
            			android:layout_gravity="center_horizontal"
            			android:layout_marginBottom="10dp"
            			android:onClick="onRefreshClick"
            			android:text="@string/auth_check_server"
            			android:textColor="@color/textcolor"
            			android:visibility="gone" />
        
        			<TextView
            			android:id="@+id/instructions_message"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_gravity="fill_horizontal"
            			android:text="@string/auth_expired_basic_auth_toast"
            			android:visibility="gone"
            			android:layout_marginBottom="10dp" />

	    			<FrameLayout 
	        			android:id="@+id/hostUrlFrame"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
            			android:layout_marginBottom="10dp"
	        			>
					<EditText
						android:id="@+id/hostUrlInput"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:hint="@string/auth_host_url"
						android:inputType="textUri"
						android:drawablePadding="5dp"
						android:paddingRight="55dp"
						>
					<requestFocus />
					</EditText>
					<ImageButton
			    		android:id="@+id/embeddedRefreshButton"
			    		android:layout_width="48dp"
			    		android:layout_height="48dp"
			    		android:layout_gravity="center_vertical|right"
			    		android:layout_marginRight="5dp"
			    		android:padding="0dp"
			    		android:scaleType="fitCenter"
			    		android:src="@drawable/ic_action_refresh_black"
            			android:onClick="onRefreshClick"
						android:visibility="gone"
						android:background="@android:color/transparent"
			    		/>
					</FrameLayout>

					<TextView
            			android:id="@+id/server_status_text"
            			android:layout_width="match_parent"
            			android:layout_height="wrap_content"
            			android:layout_marginBottom="10dp"
            			android:drawableLeft="@android:drawable/stat_notify_sync"
            			android:drawablePadding="5dp"
            			android:gravity="center_vertical"
            			android:text="@string/auth_testing_connection" />

        			<CheckBox
            			android:id="@+id/oauth_onOff_check"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:checked="false"
            			android:onClick="onCheckClick"
            			android:text="@string/oauth_check_onoff"
            			android:textAppearance="?android:attr/textAppearanceSmall"
            			/>

        			<EditText
            			android:id="@+id/oAuthEntryPoint_1"
            			android:layout_width="match_parent"
            			android:layout_height="wrap_content"
            			android:ems="10"
						android:enabled="false"
            			android:text="@string/oauth2_url_endpoint_auth"
            			android:singleLine="true"
            			android:inputType="textUri"
            			android:visibility="gone" >
        			</EditText>

        			<EditText
            			android:id="@+id/oAuthEntryPoint_2"
            			android:layout_width="match_parent"
            			android:layout_height="wrap_content"
            			android:ems="10"
						android:enabled="false"
            			android:text="@string/oauth2_url_endpoint_access"
            			android:singleLine="true"
            			android:inputType="textUri"
            			android:visibility="gone" />
                    
                </LinearLayout>

                <EditText
                    android:id="@+id/account_username"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="@string/account_setup_basics_email_hint"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/account_password"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/account_setup_basics_password_hint"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/next"
                    android:singleLine="true" />
                
                <TextView
            		android:id="@+id/auth_status_text"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:layout_marginBottom="10dp"
            		android:drawableLeft="@android:drawable/stat_notify_sync"
            		android:drawablePadding="5dp"
            		android:gravity="center_vertical"
            		android:text="@string/auth_unauthorized" />
                
<!--                 <Button
            		android:id="@+id/buttonOK"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:layout_gravity="center_horizontal"
		            android:enabled="false"
            		android:onClick="onOkClick"
            		android:text="@string/setup_btn_connect" /> -->

              <include layout="@layout/wizard_setup" /> 
                
                <com.elenoondrive.android.ui.TextViewPlus
                    android:id="@+id/password_forgoten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/forgot_password"
                    app:customFont1="DroidNaskhRegularSystemUI.ttf"/>
                
               <Button
            		android:id="@+id/welcome_link"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:background="@android:color/transparent"
            		android:onClick="onRegisterClick"
            		android:paddingBottom="5dp"
            		android:paddingTop="5dp"
            		android:text="@string/auth_register"
            		android:textColor="#0000FF"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>